--- a/Makefile.in
+++ b/Makefile.in
@@ -870,6 +870,9 @@ uninstall-am: uninstall-nobase_dist_docDATA
 	uninstall-nobase_dist_docDATA
 
 
+bench:
+	cd tools/bench && $(MAKE) $(AM_MAKEFLAGS) bench
+
 # Various checks for "make dist".
 # * Check consistency concerning -version-info. Moreover if the VERSION
 #   file doesn't end with "-dev", check that the -version-info value is
