--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -174,7 +174,7 @@ am_libmpfr_la_OBJECTS = exceptions.lo extract.lo uceil_exp2.lo \
 	get_flt.lo scale2.lo set_z_exp.lo ai.lo gammaonethird.lo \
 	grandom.lo fpif.lo set_float128.lo get_float128.lo rndna.lo \
 	nrandom.lo random_deviate.lo erandom.lo mpfr-mini-gmp.lo \
-	fmma.lo log_ui.lo
+	fmma.lo log_ui.lo gamma_inc.lo
 libmpfr_la_OBJECTS = $(am_libmpfr_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -414,7 +414,7 @@ buildopt.c digamma.c bernoulli.c isregular.c set_flt.c get_flt.c	\
 scale2.c set_z_exp.c ai.c gammaonethird.c ieee_floats.h			\
 grandom.c fpif.c set_float128.c get_float128.c rndna.c nrandom.c        \
 random_deviate.h random_deviate.c erandom.c mpfr-mini-gmp.c             \
-mpfr-mini-gmp.h fmma.c log_ui.c
+mpfr-mini-gmp.h fmma.c log_ui.c gamma_inc.c
 
 libmpfr_la_LIBADD = @LIBOBJS@
 
@@ -601,6 +601,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/free_cache.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/frexp.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gamma.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gamma_inc.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gammaonethird.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/get_d.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/get_d64.Plo@am__quote@
